--- a/www/index.html
+++ b/www/index.html
@@ -9,13 +9,8 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
+    <script src="lib/phaser/phaser.min.js"></script>
+    <script src="js/main.js"></script>
   </head>
-  <body ng-app="ionicphaser">
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">We be putting phaser on the phone</h1>
-      </ion-header-bar>
-      <ion-content></ion-content>
-    </ion-pane>
-  </body>
+  <body ng-app="ionicphaser"></body>
 </html>
